[gd_scene load_steps=14 format=3 uid="uid://blqop2ndwnk1e"]

[ext_resource type="Texture2D" uid="uid://cvakcjcl55q8w" path="res://assets/back.png" id="1_awuqd"]
[ext_resource type="Script" path="res://scripts/science_physique_technologiques.gd" id="2_1wc5h"]
[ext_resource type="Texture2D" uid="uid://cqodojy4p7omh" path="res://assets/Planètes1.png" id="2_4pphv"]
[ext_resource type="Script" path="res://scenes/histoire.gd" id="4_lv4fm"]
[ext_resource type="Texture2D" uid="uid://b1bbhafuv6c0b" path="res://assets/Planètes2.png" id="4_te6no"]
[ext_resource type="Texture2D" uid="uid://dasv012orclit" path="res://assets/Planètes3.png" id="5_te8kd"]
[ext_resource type="Script" path="res://scenes/geographie.gd" id="6_6l0kh"]
[ext_resource type="Texture2D" uid="uid://xqea2878eecu" path="res://assets/Planètes4.png" id="6_6sy5p"]
[ext_resource type="Texture2D" uid="uid://pjblsugfvor" path="res://assets/Planètes5.png" id="7_8e0qs"]
[ext_resource type="FontFile" uid="uid://cupbwx7kqt1hn" path="res://assets/space-age/space age.ttf" id="8_us18b"]
[ext_resource type="Script" path="res://scenes/maths.gd" id="8_wqa52"]
[ext_resource type="Script" path="res://scenes/conjugaison.gd" id="10_2gpco"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1egqs"]
radius = 84.006

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Back" type="Sprite2D" parent="."]
position = Vector2(-1, -1)
scale = Vector2(0.952393, 0.716146)
texture = ExtResource("1_awuqd")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(104, 24)
script = ExtResource("2_1wc5h")
metadata/_edit_group_ = true

[node name="Sciences" type="Sprite2D" parent="Area2D"]
position = Vector2(-768, -99)
scale = Vector2(0.0436859, 0.0423553)
texture = ExtResource("2_4pphv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-778, -100)
shape = SubResource("CircleShape2D_1egqs")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(398, 304)
script = ExtResource("4_lv4fm")
metadata/_edit_group_ = true

[node name="Histoire" type="Sprite2D" parent="Area2D2"]
position = Vector2(-777.125, -101.031)
scale = Vector2(0.0410847, 0.0415365)
texture = ExtResource("4_te6no")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-774, -98)
shape = SubResource("CircleShape2D_1egqs")

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2(764, -6)
script = ExtResource("6_6l0kh")
metadata/_edit_group_ = true

[node name="Geographie" type="Sprite2D" parent="Area2D3"]
position = Vector2(-774.125, -96.0312)
scale = Vector2(0.0419399, 0.0435522)
texture = ExtResource("5_te8kd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(-778, -100)
shape = SubResource("CircleShape2D_1egqs")

[node name="Area2D4" type="Area2D" parent="."]
position = Vector2(1130, 310)
script = ExtResource("8_wqa52")
metadata/_edit_group_ = true

[node name="Maths" type="Sprite2D" parent="Area2D4"]
position = Vector2(-779.125, -99.0312)
scale = Vector2(0.0405146, 0.0423428)
texture = ExtResource("6_6sy5p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2(-778, -100)
shape = SubResource("CircleShape2D_1egqs")

[node name="Area2D5" type="Area2D" parent="."]
position = Vector2(1430, 62)
script = ExtResource("10_2gpco")
metadata/_edit_group_ = true

[node name="Conjugaison" type="Sprite2D" parent="Area2D5"]
position = Vector2(-778.125, -99.0312)
scale = Vector2(0.0407996, 0.0423428)
texture = ExtResource("7_8e0qs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D5"]
position = Vector2(-778, -100)
shape = SubResource("CircleShape2D_1egqs")

[node name="Label" type="Label" parent="."]
offset_left = -602.0
offset_top = -380.0
offset_right = 594.0
offset_bottom = -317.0
theme_override_fonts/font = ExtResource("8_us18b")
theme_override_font_sizes/font_size = 42
text = "ENVOLE TOI POUR UNE DE CES PLANETES !"

[node name="ConjName" type="Label" parent="."]
offset_left = 584.0
offset_top = 62.0
offset_right = 726.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_us18b")

[node name="GeoName" type="Label" parent="."]
offset_left = -78.0
offset_top = 2.0
offset_right = 64.0
offset_bottom = 25.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_us18b")

[node name="MathsName" type="Label" parent="."]
offset_left = 260.0
offset_top = 314.0
offset_right = 456.0
offset_bottom = 355.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_us18b")

[node name="SciencesName" type="Label" parent="."]
offset_left = -888.0
offset_top = 22.0
offset_right = -692.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_us18b")

[node name="HistoireName" type="Label" parent="."]
offset_left = -428.0
offset_top = 310.0
offset_right = -232.0
offset_bottom = 351.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_us18b")

[connection signal="input_event" from="Area2D" to="Area2D" method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="Area2D" method="_on_mouse_exited"]
[connection signal="input_event" from="Area2D2" to="Area2D2" method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D2" to="Area2D2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D2" to="Area2D2" method="_on_mouse_exited"]
[connection signal="input_event" from="Area2D3" to="Area2D3" method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D3" to="Area2D3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D3" to="Area2D3" method="_on_mouse_exited"]
[connection signal="input_event" from="Area2D4" to="Area2D4" method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D4" to="Area2D4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D4" to="Area2D4" method="_on_mouse_exited"]
[connection signal="input_event" from="Area2D5" to="Area2D5" method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D5" to="Area2D5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D5" to="Area2D5" method="_on_mouse_exited"]
